include/X11/extensions/XInput.bi


declare function XChangePointerDevice cdecl alias "XChangePointerDevice" (byval as Display ptr, byval as XDevice ptr, byval as integer, byval as integer) as integer
declare function XGrabDevice cdecl alias "XGrabDevice" (byval as Display ptr, byval as XDevice ptr, byval as Window, byval as Bool, byval as integer, byval as XEventClass ptr, byval as integer, byval as integer, byval as Time) as integer
declare function XUngrabDevice cdecl alias "XUngrabDevice" (byval as Display ptr, byval as XDevice ptr, byval as Time) as integer
declare function XGrabDeviceKey cdecl alias "XGrabDeviceKey" (byval as Display ptr, byval as XDevice ptr, byval as uinteger, byval as uinteger, byval as XDevice ptr, byval as Window, byval as Bool, byval as uinteger, byval as XEventClass ptr, byval as integer, byval as integer) as integer
declare function XUngrabDeviceKey cdecl alias "XUngrabDeviceKey" (byval as Display ptr, byval as XDevice ptr, byval as uinteger, byval as uinteger, byval as XDevice ptr, byval as Window) as integer
declare function XGrabDeviceButton cdecl alias "XGrabDeviceButton" (byval as Display ptr, byval as XDevice ptr, byval as uinteger, byval as uinteger, byval as XDevice ptr, byval as Window, byval as Bool, byval as uinteger, byval as XEventClass ptr, byval as integer, byval as integer) as integer
declare function XUngrabDeviceButton cdecl alias "XUngrabDeviceButton" (byval as Display ptr, byval as XDevice ptr, byval as uinteger, byval as uinteger, byval as XDevice ptr, byval as Window) as integer
declare function XAllowDeviceEvents cdecl alias "XAllowDeviceEvents" (byval as Display ptr, byval as XDevice ptr, byval as integer, byval as Time) as integer
declare function XGetDeviceFocus cdecl alias "XGetDeviceFocus" (byval as Display ptr, byval as XDevice ptr, byval as Window ptr, byval as integer ptr, byval as Time ptr) as integer
declare function XSetDeviceFocus cdecl alias "XSetDeviceFocus" (byval as Display ptr, byval as XDevice ptr, byval as Window, byval as integer, byval as Time) as integer
declare function XGetFeedbackControl cdecl alias "XGetFeedbackControl" (byval as Display ptr, byval as XDevice ptr, byval as integer ptr) as XFeedbackState ptr
declare sub XFreeFeedbackList cdecl alias "XFreeFeedbackList" (byval as XFeedbackState ptr)
declare function XChangeFeedbackControl cdecl alias "XChangeFeedbackControl" (byval as Display ptr, byval as XDevice ptr, byval as uinteger, byval as XFeedbackControl ptr) as integer
declare function XDeviceBell cdecl alias "XDeviceBell" (byval as Display ptr, byval as XDevice ptr, byval as XID, byval as XID, byval as integer) as integer
declare function XGetDeviceKeyMapping cdecl alias "XGetDeviceKeyMapping" (byval as Display ptr, byval as XDevice ptr, byval as KeyCode, byval as integer, byval as integer ptr) as KeySym ptr
declare function XChangeDeviceKeyMapping cdecl alias "XChangeDeviceKeyMapping" (byval as Display ptr, byval as XDevice ptr, byval as integer, byval as integer, byval as KeySym ptr, byval as integer) as integer
declare function XGetDeviceModifierMapping cdecl alias "XGetDeviceModifierMapping" (byval as Display ptr, byval as XDevice ptr) as XModifierKeymap ptr
declare function XSetDeviceModifierMapping cdecl alias "XSetDeviceModifierMapping" (byval as Display ptr, byval as XDevice ptr, byval as XModifierKeymap ptr) as integer
declare function XSetDeviceButtonMapping cdecl alias "XSetDeviceButtonMapping" (byval as Display ptr, byval as XDevice ptr, byval as ubyte ptr, byval as integer) as integer
declare function XGetDeviceButtonMapping cdecl alias "XGetDeviceButtonMapping" (byval as Display ptr, byval as XDevice ptr, byval as ubyte ptr, byval as uinteger) as integer
declare function XQueryDeviceState cdecl alias "XQueryDeviceState" (byval as Display ptr, byval as XDevice ptr) as XDeviceState ptr
declare sub XFreeDeviceState cdecl alias "XFreeDeviceState" (byval as XDeviceState ptr)
declare function XListInputDevices cdecl alias "XListInputDevices" (byval as Display ptr, byval as integer ptr) as XDeviceInfo ptr
declare sub XFreeDeviceList cdecl alias "XFreeDeviceList" (byval as XDeviceInfo ptr)
declare function XOpenDevice cdecl alias "XOpenDevice" (byval as Display ptr, byval as XID) as XDevice ptr
declare function XCloseDevice cdecl alias "XCloseDevice" (byval as Display ptr, byval as XDevice ptr) as integer
declare function XSetDeviceMode cdecl alias "XSetDeviceMode" (byval as Display ptr, byval as XDevice ptr, byval as integer) as integer
declare function XSetDeviceValuators cdecl alias "XSetDeviceValuators" (byval as Display ptr, byval as XDevice ptr, byval as integer ptr, byval as integer, byval as integer) as integer
declare function XGetDeviceControl cdecl alias "XGetDeviceControl" (byval as Display ptr, byval as XDevice ptr, byval as integer) as XDeviceControl ptr
declare function XChangeDeviceControl cdecl alias "XChangeDeviceControl" (byval as Display ptr, byval as XDevice ptr, byval as integer, byval as XDeviceControl ptr) as integer
declare function XSelectExtensionEvent cdecl alias "XSelectExtensionEvent" (byval as Display ptr, byval as Window, byval as XEventClass ptr, byval as integer) as integer
declare function XGetSelectedExtensionEvents cdecl alias "XGetSelectedExtensionEvents" (byval as Display ptr, byval as Window, byval as integer ptr, byval as XEventClass ptr ptr, byval as integer ptr, byval as XEventClass ptr ptr) as integer
declare function XChangeDeviceDontPropagateList cdecl alias "XChangeDeviceDontPropagateList" (byval as Display ptr, byval as Window, byval as integer, byval as XEventClass ptr, byval as integer) as integer
declare function XGetDeviceDontPropagateList cdecl alias "XGetDeviceDontPropagateList" (byval as Display ptr, byval as Window, byval as integer ptr) as XEventClass ptr
declare function XSendExtensionEvent cdecl alias "XSendExtensionEvent" (byval as Display ptr, byval as XDevice ptr, byval as Window, byval as Bool, byval as integer, byval as XEventClass ptr, byval as XEvent ptr) as Status
declare function XGetDeviceMotionEvents cdecl alias "XGetDeviceMotionEvents" (byval as Display ptr, byval as XDevice ptr, byval as Time, byval as Time, byval as integer ptr, byval as integer ptr, byval as integer ptr) as XDeviceTimeCoord ptr
declare sub XFreeDeviceMotionEvents cdecl alias "XFreeDeviceMotionEvents" (byval as XDeviceTimeCoord ptr)
declare sub XFreeDeviceControl cdecl alias "XFreeDeviceControl" (byval as XDeviceControl ptr)

type XIPropertyInfo
	pending as Bool
	range as Bool
	immutable as Bool
	fromClient as Bool
	num_values as integer
	values as integer ptr
end type

declare function XListDeviceProperties cdecl alias "XListDeviceProperties" (byval as Display ptr, byval as XDevice ptr, byval as integer ptr) as Atom ptr
declare sub XDeleteDeviceProperty cdecl alias "XDeleteDeviceProperty" (byval as Display ptr, byval as XDevice ptr, byval as Atom)
declare function XGetDeviceProperty cdecl alias "XGetDeviceProperty" (byval as Display ptr, byval as XDevice ptr, byval as Atom, byval as integer, byval as integer, byval as Bool, byval as Atom, byval as Atom ptr, byval as integer ptr, byval as uinteger ptr, byval as uinteger ptr, byval as ubyte ptr ptr) as Status

#endif
